--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
-	{% capture side_include %}{% include _Sidebar.md %}{% endcapture %}
+	{% capture side_include %}{% include_relative _Sidebar.md %}{% endcapture %}
 	{{ side_include | markdownify }}
       </header>
       <section>
@@ -49,7 +49,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-	{% capture foot_include %}{% include _Footer.md %}{% endcapture %}
+	{% capture foot_include %}{% include_relative _Footer.md %}{% endcapture %}
         {{ foot_include | markdownify }}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
