--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
   <body>
     <div class="wrapper">
       <header>
+	<!--  
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
-	<!--
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
@@ -44,15 +44,16 @@
       </header>
       <section>
 
-      {{ content }}
+        {{ content }}
+
+        {% capture foot_include %}{% include_relative _Footer.md %}{% endcapture %}
+	<p><small>{{ foot_include | markdownify }}</small></p>
 
       </section>
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-	{% capture foot_include %}{% include_relative _Footer.md %}{% endcapture %}
-        {{ foot_include | markdownify }}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
