--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -213,6 +213,10 @@ footer {
     padding-right:320px;
   }
 
+  header ul, header p.view {
+    position:static;
+  }
+
   section {
     border:1px solid #e5e5e5;
     border-width:1px 0;
