working on wrapping

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -210,7 +210,8 @@ footer {
   }
 
   header {
-    padding-right:320px;
+    //padding-right:320px;
+    padding:0;
   }
 
   header ul, header p.view {
