--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -210,12 +210,8 @@ footer {
   }
 
   header {
-    //padding-right:320px;
-    padding:0;
-  }
-
-  header ul, header p.view {
-    position:static;
+    padding-right:320px;
+    //padding:0;
   }
 
   section {
@@ -229,11 +225,14 @@ footer {
     display:inline;
   }
 
+
   header ul {
     position:absolute;
     right:50px;
     top:52px;
+    height:auto
   }
+
 }
 
 @media print, screen and (max-width: 720px) {
