working on wrapping

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -206,7 +206,7 @@ footer {
   header, section, footer {
     float:none;
     position:static;
-    height:auto
+    height:auto;
     width:auto;
   }
 
@@ -231,7 +231,7 @@ footer {
     position:absolute;
     right:50px;
     top:52px;
-    height:auto
+    height:auto;
   }
 
 }
