working on wrapping

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -206,7 +206,6 @@ footer {
   header, section, footer {
     float:none;
     position:static;
-    height:400px;
     width:auto;
   }
 
@@ -227,12 +226,13 @@ footer {
   }
 
 
+/*
   header ul {
     position:absolute;
     right:50px;
     top:52px;
-    height:400px;
   }
+*/
 
 }
 
