--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#ffffff">
 
     {% if page.path contains "index" %}
-      <title>Home | OpenSHA</title>
+      <title>Open-Source Seismic Hazard Analysis | OpenSHA</title>
     {% else %}
       <title>{{ page.path | remove: ".md" }} | OpenSHA</title>
     {% endif %}
