css mod for sidebar

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -212,6 +212,7 @@ footer {
 
   header {
     padding-right:320px;
+    list-style-type: none;
     //padding:0;
   }
 
@@ -244,6 +245,7 @@ footer {
 
   header {
     padding:0;
+    list-style-type: none;
   }
 
   header ul, header p.view {
