css mod for sidebar

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -107,9 +107,9 @@ img {
 header {
   ul {
     list-style:none;
-    margin-left:0px;
+    margin-left:0 0 0px;
     ul {
-      margin-left:20px;
+      margin-left:0 0 20px;
     }
   }
   width:200px;
