--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -107,9 +107,10 @@ img {
 header {
   ul {
     list-style:none;
-    margin:0 0 2px;
+    padding:0px;
+    margin:0 0 5px;
     ul {
-      margin:0 0 10px;
+      margin:0 0 15px;
     }
   }
   width:200px;
