css mod for sidebar

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -107,10 +107,11 @@ img {
 header {
   ul {
     list-style:none;
-    padding:0px;
-    margin:0 0 5px;
+    padding:5px;
+//    margin:0 0 5px;
     ul {
-      margin:0 0 15px;
+      padding:15px;
+//      margin:0 0 15px;
     }
   }
   width:200px;
