--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -107,10 +107,11 @@ img {
 header {
   ul {
     list-style:none;
-    padding:5px;
+    // top right bottom left
+    padding:0 0 0 5px;
 //    margin:0 0 5px;
     ul {
-      padding:15px;
+      padding:0 0 0 15px;
 //      margin:0 0 15px;
     }
   }
